new pic, text update, styling fix.
text update, picture update, comment out project 4.

--- a/css/main.css
+++ b/css/main.css
@@ -282,4 +282,6 @@ footer .footer-social-media .far, footer .footer-social-media .fab {
   .top-header .top-header-social-media .far, .top-header .top-header-social-media .fab {
     font-size: 1.5rem;
   }
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
